Access Ports & Reactor Glass
Added access ports w/ inventories
Added reactor glass block
Removed some spurious debug logging

--- a/mods/bigreactors/languages/en_US.properties
+++ b/mods/bigreactors/languages/en_US.properties
@@ -11,7 +11,9 @@ tile.blockReactorPart.0.name=Reactor Casing
 tile.blockReactorPart.1.name=Reactor Controller
 tile.blockReactorPart.2.name=Reactor Control Rod
 tile.blockReactorPart.3.name=Reactor Power Tap
+tile.blockReactorPart.4.name=Reactor Access Port
 tile.blockRadiothermalGen.0=Radiothermal Generator
+tile.blockReactorGlass.name=Reactor Glass
 
 # Items
 item.ingotYellorium.name = Yellorium Ingot
