--- a/mods/bigreactors/languages/en_US.properties
+++ b/mods/bigreactors/languages/en_US.properties
@@ -17,5 +17,7 @@ tile.blockReactorGlass.name=Reactor Glass
 
 # Items
 item.ingotYellorium.name = Yellorium Ingot
-item.ingotDepletedYellorium.name = Depleted Yellorium Ingot
+item.ingotCyanite.name = Cyanite Ingot
 item.dustYellorite.name=Yellorite Dust
+item.ingotGraphite.name= Graphite Bar
+item.ingotBlutonium.name= Blutonium Ingot
