--- a/mods/bigreactors/languages/en_US.properties
+++ b/mods/bigreactors/languages/en_US.properties
@@ -14,6 +14,7 @@ tile.blockReactorPart.3.name=Reactor Power Tap
 tile.blockReactorPart.4.name=Reactor Access Port
 tile.blockRadiothermalGen.0=Radiothermal Generator
 tile.blockReactorGlass.name=Reactor Glass
+tile.blockBRSmallMachine.0.name=Cyanite Reprocesssor
 
 # Items
 item.ingotYellorium.name = Yellorium Ingot
