Testing revision of new control rods
Initial test of new control rods with temporary UI.
Control rods can be inserted/retracted at 10% intervals (1% internally)
Control rods visually render in the game!
New TESR that's far more efficient than the old one
Removing usage of TileEntityFuelRod, but not yet removing it completely
so as not to break MultiblockReactor.
Lightening fuel texture so you can see the rod inside the fuel.
Miscellaneous cleanup.

--- a/mods/bigreactors/languages/en_US.properties
+++ b/mods/bigreactors/languages/en_US.properties
@@ -7,13 +7,14 @@ itemGroup.BigReactors=Big Reactors
 tile.brOre.0.name=Yellorite Ore
 tile.controlRod.0.name=Control Rod
 tile.yelloriumFuelRod.0.name=Yellorium Fuel Rod
+tile.blockReactorControlRod.name=New Control Rod
+tile.blockReactorGlass.name=Reactor Glass
 tile.blockReactorPart.0.name=Reactor Casing
 tile.blockReactorPart.1.name=Reactor Controller
 tile.blockReactorPart.2.name=Reactor Control Rod
 tile.blockReactorPart.3.name=Reactor Power Tap
 tile.blockReactorPart.4.name=Reactor Access Port
 tile.blockRadiothermalGen.0=Radiothermal Generator
-tile.blockReactorGlass.name=Reactor Glass
 tile.blockBRSmallMachine.0.name=Cyanite Reprocesssor
 
 # Items
