--- a/mods/bigreactors/languages/en_US.properties
+++ b/mods/bigreactors/languages/en_US.properties
@@ -7,13 +7,12 @@ itemGroup.BigReactors=Big Reactors
 tile.brOre.0.name=Yellorite Ore
 tile.controlRod.0.name=Control Rod
 tile.yelloriumFuelRod.0.name=Yellorium Fuel Rod
-tile.blockReactorControlRod.name=New Control Rod
+tile.blockReactorControlRod.name=Reactor Control Rod
 tile.blockReactorGlass.name=Reactor Glass
 tile.blockReactorPart.0.name=Reactor Casing
 tile.blockReactorPart.1.name=Reactor Controller
-tile.blockReactorPart.2.name=Reactor Control Rod
-tile.blockReactorPart.3.name=Reactor Power Tap
-tile.blockReactorPart.4.name=Reactor Access Port
+tile.blockReactorPart.2.name=Reactor Power Tap
+tile.blockReactorPart.3.name=Reactor Access Port
 tile.blockRadiothermalGen.0=Radiothermal Generator
 tile.blockBRSmallMachine.0.name=Cyanite Reprocesssor
 
@@ -21,5 +20,5 @@ tile.blockBRSmallMachine.0.name=Cyanite Reprocesssor
 item.ingotYellorium.name = Yellorium Ingot
 item.ingotCyanite.name = Cyanite Ingot
 item.dustYellorite.name=Yellorite Dust
-item.ingotGraphite.name= Graphite Bar
-item.ingotBlutonium.name= Blutonium Ingot
+item.ingotGraphite.name=Graphite Bar
+item.ingotBlutonium.name=Blutonium Ingot
