(0.1.6A) Dusts + TE compatibility for ores/dusts
AE also supported but its manager appears to be busted

--- a/mods/bigreactors/languages/en_US.properties
+++ b/mods/bigreactors/languages/en_US.properties
@@ -19,6 +19,9 @@ tile.blockBRSmallMachine.0.name=Cyanite Reprocesssor
 # Items
 item.ingotYellorium.name = Yellorium Ingot
 item.ingotCyanite.name = Cyanite Ingot
-item.dustYellorite.name=Yellorite Dust
+item.dustYellorium.name=Yellorium Dust
 item.ingotGraphite.name=Graphite Bar
 item.ingotBlutonium.name=Blutonium Ingot
+item.dustCyanite.name=Cyanite Dust
+item.dustBlutonium.name=Blutonium Dust
+item.dustGraphite.name=Graphite Dust
