--- a/assets/bigreactors/languages/en_US.properties
+++ b/assets/bigreactors/languages/en_US.properties
@@ -25,3 +25,5 @@ item.dustYellorium.name=Yellorium Dust
 item.dustCyanite.name=Cyanite Dust
 item.dustBlutonium.name=Blutonium Dust
 item.dustGraphite.name=Graphite Dust
+item.bucket.cyanite.name=Liquid Cyanite Bucket
+item.bucket.yellorium.name=Liquid Yellorium Bucket
