--- a/assets/bigreactors/languages/en_US.properties
+++ b/assets/bigreactors/languages/en_US.properties
@@ -16,6 +16,7 @@ tile.blockReactorPart.3.name=Reactor Access Port
 tile.blockReactorPart.4.name=Reactor RedNet Port
 tile.blockRadiothermalGen.0=Radiothermal Generator
 tile.blockBRSmallMachine.0.name=Cyanite Reprocesssor
+tile.blockBRSmallMachine.1.name=Heat Generator
 
 # Items
 item.ingotYellorium.name = Yellorium Ingot
