Reactor inputs & sketchout UI
Inputs now work, added persistence & network comms.
Initial rev of a UI and some minor cleanup.

--- a/assets/bigreactors/languages/en_US.properties
+++ b/assets/bigreactors/languages/en_US.properties
@@ -9,6 +9,7 @@ tile.controlRod.0.name=Control Rod
 tile.yelloriumFuelRod.0.name=Yellorium Fuel Rod
 tile.blockReactorControlRod.name=Reactor Control Rod
 tile.blockReactorGlass.name=Reactor Glass
+tile.blockReactorRedstonePort.name=Reactor Redstone Port
 tile.blockReactorPart.0.name=Reactor Casing
 tile.blockReactorPart.1.name=Reactor Controller
 tile.blockReactorPart.2.name=Reactor Power Tap
