--- a/assets/bigreactors/languages/zh_CN.properties
+++ b/assets/bigreactors/languages/zh_CN.properties
@@ -9,6 +9,7 @@ tile.controlRod.0.name=\u63a7\u5236\u68d2
 tile.yelloriumFuelRod.0.name=\u9ec4\u94c0\u71c3\u6599\u68d2
 tile.blockReactorControlRod.name=\u53cd\u5e94\u5806\u63a7\u5236\u68d2
 tile.blockReactorGlass.name=\u53cd\u5e94\u5806\u73bb\u7483
+tile.blockReactorRedstonePort.name=Reactor Redstone Port
 tile.blockReactorPart.0.name=\u53cd\u5e94\u5806\u5916\u58f3
 tile.blockReactorPart.1.name=\u53cd\u5e94\u5806\u63a7\u5236\u5668
 tile.blockReactorPart.2.name=\u53cd\u5e94\u5806\u80fd\u91cf\u63a5\u53e3
