--- a/assets/bigreactors/languages/zh_CN.properties
+++ b/assets/bigreactors/languages/zh_CN.properties
@@ -15,6 +15,7 @@ tile.blockReactorPart.1.name=\u53cd\u5e94\u5806\u63a7\u5236\u5668
 tile.blockReactorPart.2.name=\u53cd\u5e94\u5806\u80fd\u91cf\u63a5\u53e3
 tile.blockReactorPart.3.name=\u53cd\u5e94\u5806\u8bbf\u95ee\u7aef\u53e3
 tile.blockReactorPart.4.name=\u53cd\u5e94\u5806\u7ea2\u77f3\u7f51\u7edc\u7aef\u53e3
+tile.blockReactorPart.5.name=Reactor Computer Port
 tile.blockRadiothermalGen.0=\u653e\u5c04\u6027\u540c\u4f4d\u7d20\u70ed\u7535\u673a
 tile.blockBRSmallMachine.0.name=\u84dd\u6676\u518d\u52a0\u5de5\u673a
 
