--- a/assets/bigreactors/languages/en_US.properties
+++ b/assets/bigreactors/languages/en_US.properties
@@ -15,6 +15,7 @@ tile.blockReactorPart.1.name=Reactor Controller
 tile.blockReactorPart.2.name=Reactor Power Tap
 tile.blockReactorPart.3.name=Reactor Access Port
 tile.blockReactorPart.4.name=Reactor RedNet Port
+tile.blockReactorPart.5.name=Reactor Computer Port
 tile.blockRadiothermalGen.0=Radiothermal Generator
 tile.blockBRSmallMachine.0.name=Cyanite Reprocesssor
 
