Fixing translations, adding German

--- a/assets/bigreactors/languages/en_US.properties
+++ b/assets/bigreactors/languages/en_US.properties
@@ -1,11 +1,10 @@
-# Basic Components Language Properties
-# @author Calclavia
+# Big Reactors Language Properties - English
+# @author Erogenous Beef
 
 itemGroup.BigReactors=Big Reactors
 
 # Blocks
 tile.brOre.0.name=Yellorite Ore
-tile.controlRod.0.name=Control Rod
 tile.yelloriumFuelRod.0.name=Yellorium Fuel Rod
 tile.blockReactorControlRod.name=Reactor Control Rod
 tile.blockReactorGlass.name=Reactor Glass
@@ -28,5 +27,12 @@ item.dustYellorium.name=Yellorium Dust
 item.dustCyanite.name=Cyanite Dust
 item.dustBlutonium.name=Blutonium Dust
 item.dustGraphite.name=Graphite Dust
-item.bucket.cyanite.name=Liquid Cyanite Bucket
-item.bucket.yellorium.name=Liquid Yellorium Bucket
+item.bucket.cyanite.name=Fluid Cyanite Bucket
+item.bucket.yellorium.name=Fluid Yellorium Bucket
+
+# Fluids
+fluid.tile.water=Water
+fluid.tile.lava=Lava
+fluid.tile.yellorium=Fluid Yellorium
+fluid.tile.cyanite=Fluid Cyanite
+fluid.tile.blutonium=Fluid Blutonium
