--- a/assets/bigreactors/languages/zh_CN.properties
+++ b/assets/bigreactors/languages/zh_CN.properties
@@ -5,7 +5,6 @@ itemGroup.BigReactors=\u5927\u578b\u53cd\u5e94\u5806
 
 # Blocks
 tile.brOre.0.name=\u9ec4\u94c0\u77ff\u77f3
-tile.controlRod.0.name=\u63a7\u5236\u68d2
 tile.yelloriumFuelRod.0.name=\u9ec4\u94c0\u71c3\u6599\u68d2
 tile.blockReactorControlRod.name=\u53cd\u5e94\u5806\u63a7\u5236\u68d2
 tile.blockReactorGlass.name=\u53cd\u5e94\u5806\u73bb\u7483
@@ -30,3 +29,10 @@ item.dustBlutonium.name=\u6cb9\u7126\u7c89
 item.dustGraphite.name=\u77f3\u58a8\u7c89
 item.bucket.cyanite.name=\u6db2\u6001\u84dd\u6676\u6876
 item.bucket.yellorium.name=\u6db2\u6001\u9ec4\u94c0\u6876
+
+# Fluids
+fluid.tile.water=Water
+fluid.tile.lava=Lava
+fluid.tile.yellorium=Fluid Yellorium
+fluid.tile.cyanite=Fluid Cyanite
+fluid.tile.blutonium=Fluid Blutonium
