Satisfactory turbine mechanics in debug machine
Adding a debugging turbine to test mechanics.

--- a/assets/bigreactors/languages/en_US.properties
+++ b/assets/bigreactors/languages/en_US.properties
@@ -18,6 +18,7 @@ tile.blockReactorPart.5.name=Reactor Computer Port
 tile.blockRadiothermalGen.0=Radiothermal Generator
 tile.blockBRSmallMachine.0.name=Cyanite Reprocesssor
 tile.blockBRSmallMachine.1.name=Heat Generator
+tile.blockBRSmallMachine.2.name=Debug Turbine
 
 # Items
 item.ingotYellorium.name = Yellorium Ingot
