Basic turbine framework with metadata-less icons
Parts calculate their position and outwards direction on assembly. Parts
also work on the top/bottom faces now.

--- a/assets/bigreactors/languages/en_US.properties
+++ b/assets/bigreactors/languages/en_US.properties
@@ -19,6 +19,10 @@ tile.blockRadiothermalGen.0=Radiothermal Generator
 tile.blockBRSmallMachine.0.name=Cyanite Reprocesssor
 tile.blockBRSmallMachine.1.name=Heat Generator
 tile.blockBRSmallMachine.2.name=Debug Turbine
+tile.blockTurbinePart.0.name=Turbine Housing
+tile.blockTurbinePart.1.name=Turbine Controller
+tile.blockTurbinePart.2.name=Turbine Power Port
+tile.blockTurbinePart.3.name=Turbine Fluid Port
 
 # Items
 item.ingotYellorium.name = Yellorium Ingot
