Block out remaining vital parts
Beginnings of turbine rotor validation

--- a/assets/bigreactors/languages/en_US.properties
+++ b/assets/bigreactors/languages/en_US.properties
@@ -23,6 +23,10 @@ tile.blockTurbinePart.0.name=Turbine Housing
 tile.blockTurbinePart.1.name=Turbine Controller
 tile.blockTurbinePart.2.name=Turbine Power Port
 tile.blockTurbinePart.3.name=Turbine Fluid Port
+tile.blockTurbinePart.4.name=Turbine Rotor Bearing
+tile.blockTurbinePart.5.name=Turbine Creative Steam Generator
+tile.blockTurbineRotorPart.0.name=Turbine Rotor Shaft
+tile.blockTurbineRotorPart.1.name=Turbine Rotor Blade
 
 # Items
 item.ingotYellorium.name = Yellorium Ingot
