Multiblock glass w/ connected textures
Also eliminating many useless ItemBlock subclasses and making
ItemBlockBigReactors nice and generic.
And some code cleanup.

--- a/assets/bigreactors/languages/de_DE.properties
+++ b/assets/bigreactors/languages/de_DE.properties
@@ -5,9 +5,10 @@ itemGroup.BigReactors=Big Reactors
 
 # Blocks
 tile.brOre.0.name=Yelloriterz
-tile.yelloriumFuelRod.0.name=Yelloriumbrennstab
+tile.yelloriumFuelRod.name=Yelloriumbrennstab
 tile.blockReactorControlRod.name=Reaktorsteuerstab
-tile.blockReactorGlass.name=Reaktorglas
+tile.multiblockGlass.0.name=Reaktorglas
+tile.multiblockGlass.1.name=Turbine Glass
 tile.blockReactorRedstonePort.name=Reaktor-Redstoneanschluss
 tile.blockReactorPart.0.name=Reaktorgeh\u00e4use
 tile.blockReactorPart.1.name=Reaktorsteuerung
