--- a/assets/bigreactors/languages/en_US.properties
+++ b/assets/bigreactors/languages/en_US.properties
@@ -5,9 +5,10 @@ itemGroup.BigReactors=Big Reactors
 
 # Blocks
 tile.brOre.0.name=Yellorite Ore
-tile.yelloriumFuelRod.0.name=Yellorium Fuel Rod
+tile.yelloriumFuelRod.name=Yellorium Fuel Rod
 tile.blockReactorControlRod.name=Reactor Control Rod
-tile.blockReactorGlass.name=Reactor Glass
+tile.multiblockGlass.0.name=Reactor Glass
+tile.multiblockGlass.1.name=Turbine Glass
 tile.blockReactorRedstonePort.name=Reactor Redstone Port
 tile.blockReactorPart.0.name=Reactor Casing
 tile.blockReactorPart.1.name=Reactor Controller
