--- a/assets/bigreactors/languages/zh_CN.properties
+++ b/assets/bigreactors/languages/zh_CN.properties
@@ -5,9 +5,10 @@ itemGroup.BigReactors=\u5927\u578b\u53cd\u5e94\u5806
 
 # Blocks
 tile.brOre.0.name=\u9ec4\u94c0\u77ff\u77f3
-tile.yelloriumFuelRod.0.name=\u9ec4\u94c0\u71c3\u6599\u68d2
+tile.yelloriumFuelRod.name=\u9ec4\u94c0\u71c3\u6599\u68d2
 tile.blockReactorControlRod.name=\u53cd\u5e94\u5806\u63a7\u5236\u68d2
-tile.blockReactorGlass.name=\u53cd\u5e94\u5806\u73bb\u7483
+tile.multiblockGlass.0.name=\u53cd\u5e94\u5806\u73bb\u7483
+tile.multiblockGlass.1.name=Turbine Glass
 tile.blockReactorRedstonePort.name=Reactor Redstone Port
 tile.blockReactorPart.0.name=\u53cd\u5e94\u5806\u5916\u58f3
 tile.blockReactorPart.1.name=\u53cd\u5e94\u5806\u63a7\u5236\u5668
