Coolant block & moving creative parts to own blockID

--- a/assets/bigreactors/languages/de_DE.properties
+++ b/assets/bigreactors/languages/de_DE.properties
@@ -16,6 +16,8 @@ tile.blockReactorPart.2.name=Reaktorstromanschluss
 tile.blockReactorPart.3.name=Reaktorzugang
 tile.blockReactorPart.4.name=Reaktor-RedNet-Anschluss
 tile.blockReactorPart.5.name=Reaktor-Computeranschluss
+tile.blockReactorPart.6.name=Reaktor-K\u00fchlanschluss
+tile.blockReactorPart.7.name=Reactor Creative Coolant Port
 tile.blockRadiothermalGen.0=Radiothermalgenerator
 tile.blockBRSmallMachine.0.name=Cyanit-Wiederaufarbeiter
 
