--- a/assets/bigreactors/languages/en_US.properties
+++ b/assets/bigreactors/languages/en_US.properties
@@ -16,6 +16,7 @@ tile.blockReactorPart.2.name=Reactor Power Tap
 tile.blockReactorPart.3.name=Reactor Access Port
 tile.blockReactorPart.4.name=Reactor RedNet Port
 tile.blockReactorPart.5.name=Reactor Computer Port
+tile.blockReactorPart.6.name=Reactor Coolant Port
 tile.blockRadiothermalGen.0=Radiothermal Generator
 tile.blockBRSmallMachine.0.name=Cyanite Reprocesssor
 tile.blockBRSmallMachine.1.name=Heat Generator
@@ -25,9 +26,10 @@ tile.blockTurbinePart.1.name=Turbine Controller
 tile.blockTurbinePart.2.name=Turbine Power Port
 tile.blockTurbinePart.3.name=Turbine Fluid Port
 tile.blockTurbinePart.4.name=Turbine Rotor Bearing
-tile.blockTurbinePart.5.name=Turbine Creative Steam Generator
 tile.blockTurbineRotorPart.0.name=Turbine Rotor Shaft
 tile.blockTurbineRotorPart.1.name=Turbine Rotor Blade
+tile.blockMBCreativePart.0.name=Reactor Creative Coolant Port
+tile.blockMBCreativePart.1.name=Turbine Creative Steam Generator
 
 # Items
 item.ingotYellorium.name = Yellorium Ingot
