Adding turbine computer port, because it's easy

--- a/assets/bigreactors/languages/en_US.properties
+++ b/assets/bigreactors/languages/en_US.properties
@@ -26,6 +26,7 @@ tile.blockTurbinePart.1.name=Turbine Controller
 tile.blockTurbinePart.2.name=Turbine Power Port
 tile.blockTurbinePart.3.name=Turbine Fluid Port
 tile.blockTurbinePart.4.name=Turbine Rotor Bearing
+tile.blockTurbinePart.5.name=Turbine Computer Port
 tile.blockTurbineRotorPart.0.name=Turbine Rotor Shaft
 tile.blockTurbineRotorPart.1.name=Turbine Rotor Blade
 tile.blockMBCreativePart.0.name=Reactor Creative Coolant Port
