Metal blocks, data-driven moderation & coil data

--- a/assets/bigreactors/languages/en_US.properties
+++ b/assets/bigreactors/languages/en_US.properties
@@ -5,6 +5,10 @@ itemGroup.BigReactors=Big Reactors
 
 # Blocks
 tile.brOre.0.name=Yellorite Ore
+tile.brMetal.0.name=Yellorium Block
+tile.brMetal.1.name=Cyanite Block
+tile.brMetal.2.name=Graphite Block
+tile.brMetal.3.name=Blutonium Block
 tile.yelloriumFuelRod.name=Yellorium Fuel Rod
 tile.blockReactorControlRod.name=Reactor Control Rod
 tile.multiblockGlass.0.name=Reactor Glass
