Fixing up localization files

--- a/assets/bigreactors/languages/en_US.properties
+++ b/assets/bigreactors/languages/en_US.properties
@@ -23,8 +23,6 @@ tile.blockReactorPart.5.name=Reactor Computer Port
 tile.blockReactorPart.6.name=Reactor Coolant Port
 tile.blockRadiothermalGen.0=Radiothermal Generator
 tile.blockBRSmallMachine.0.name=Cyanite Reprocesssor
-tile.blockBRSmallMachine.1.name=Heat Generator
-tile.blockBRSmallMachine.2.name=Debug Turbine
 tile.blockTurbinePart.0.name=Turbine Housing
 tile.blockTurbinePart.1.name=Turbine Controller
 tile.blockTurbinePart.2.name=Turbine Power Port
@@ -54,3 +52,4 @@ fluid.tile.lava=Lava
 fluid.tile.yellorium=Fluid Yellorium
 fluid.tile.cyanite=Fluid Cyanite
 fluid.tile.blutonium=Fluid Blutonium
+fluid.steam=Steam
