--- a/assets/bigreactors/languages/de_DE.properties
+++ b/assets/bigreactors/languages/de_DE.properties
@@ -5,10 +5,14 @@ itemGroup.BigReactors=Big Reactors
 
 # Blocks
 tile.brOre.0.name=Yelloriterz
+tile.brMetal.0.name=Yellorium Block
+tile.brMetal.1.name=Cyanite Block
+tile.brMetal.2.name=Graphite Block
+tile.brMetal.3.name=Blutonium Block
 tile.yelloriumFuelRod.name=Yelloriumbrennstab
 tile.blockReactorControlRod.name=Reaktorsteuerstab
 tile.multiblockGlass.0.name=Reaktorglas
-tile.multiblockGlass.1.name=Turbine Glass
+tile.multiblockGlass.1.name=Turbine-glas
 tile.blockReactorRedstonePort.name=Reaktor-Redstoneanschluss
 tile.blockReactorPart.0.name=Reaktorgeh\u00e4use
 tile.blockReactorPart.1.name=Reaktorsteuerung
@@ -17,9 +21,18 @@ tile.blockReactorPart.3.name=Reaktorzugang
 tile.blockReactorPart.4.name=Reaktor-RedNet-Anschluss
 tile.blockReactorPart.5.name=Reaktor-Computeranschluss
 tile.blockReactorPart.6.name=Reaktor-K\u00fchlanschluss
-tile.blockReactorPart.7.name=Reactor Creative Coolant Port
 tile.blockRadiothermalGen.0=Radiothermalgenerator
 tile.blockBRSmallMachine.0.name=Cyanit-Wiederaufarbeiter
+tile.blockTurbinePart.0.name=Turbine-geh\u00e4use
+tile.blockTurbinePart.1.name=Turbine-steuerung
+tile.blockTurbinePart.2.name=Turbinestromanschluss
+tile.blockTurbinePart.3.name=Turbine-Fl\u00fcssigkeit-Anschluss
+tile.blockTurbinePart.4.name=Turbine Rotor Bearing
+tile.blockTurbinePart.5.name=Turbine-Computeranschluss
+tile.blockTurbineRotorPart.0.name=Turbine Rotor Shaft
+tile.blockTurbineRotorPart.1.name=Turbine Rotor Blade
+tile.blockMBCreativePart.0.name=Reactor Creative Coolant Port
+tile.blockMBCreativePart.1.name=Turbine Creative Steam Generator
 
 # Items
 item.ingotYellorium.name=Yelloriumbarren
@@ -39,3 +52,4 @@ fluid.tile.lava=Lava
 fluid.tile.yellorium=Fl\u00fcssiges Yellorium
 fluid.tile.cyanite=Fl\u00fcssiges Cyanit
 fluid.tile.blutonium=Fl\u00fcssiges Blutonium
+fluid.steam=Dampf
