--- a/assets/bigreactors/languages/zh_CN.properties
+++ b/assets/bigreactors/languages/zh_CN.properties
@@ -5,6 +5,10 @@ itemGroup.BigReactors=\u5927\u578b\u53cd\u5e94\u5806
 
 # Blocks
 tile.brOre.0.name=\u9ec4\u94c0\u77ff\u77f3
+tile.brMetal.0.name=Yellorium Block
+tile.brMetal.1.name=Cyanite Block
+tile.brMetal.2.name=Graphite Block
+tile.brMetal.3.name=Blutonium Block
 tile.yelloriumFuelRod.name=\u9ec4\u94c0\u71c3\u6599\u68d2
 tile.blockReactorControlRod.name=\u53cd\u5e94\u5806\u63a7\u5236\u68d2
 tile.multiblockGlass.0.name=\u53cd\u5e94\u5806\u73bb\u7483
@@ -17,9 +21,18 @@ tile.blockReactorPart.3.name=\u53cd\u5e94\u5806\u8bbf\u95ee\u7aef\u53e3
 tile.blockReactorPart.4.name=\u53cd\u5e94\u5806\u7ea2\u77f3\u7f51\u7edc\u7aef\u53e3
 tile.blockReactorPart.5.name=Reactor Computer Port
 tile.blockReactorPart.6.name=Reactor Coolant Port
-tile.blockReactorPart.7.name=Reactor Creative Coolant Port
 tile.blockRadiothermalGen.0=\u653e\u5c04\u6027\u540c\u4f4d\u7d20\u70ed\u7535\u673a
 tile.blockBRSmallMachine.0.name=\u84dd\u6676\u518d\u52a0\u5de5\u673a
+tile.blockTurbinePart.0.name=Turbine Housing
+tile.blockTurbinePart.1.name=Turbine Controller
+tile.blockTurbinePart.2.name=Turbine Power Port
+tile.blockTurbinePart.3.name=Turbine Fluid Port
+tile.blockTurbinePart.4.name=Turbine Rotor Bearing
+tile.blockTurbinePart.5.name=Turbine Computer Port
+tile.blockTurbineRotorPart.0.name=Turbine Rotor Shaft
+tile.blockTurbineRotorPart.1.name=Turbine Rotor Blade
+tile.blockMBCreativePart.0.name=Reactor Creative Coolant Port
+tile.blockMBCreativePart.1.name=Turbine Creative Steam Generator
 
 # Items
 item.ingotYellorium.name=\u9ec4\u94c0\u952d
@@ -39,3 +52,4 @@ fluid.tile.lava=Lava
 fluid.tile.yellorium=Fluid Yellorium
 fluid.tile.cyanite=Fluid Cyanite
 fluid.tile.blutonium=Fluid Blutonium
+fluid.steam=Steam
