--- a/assets/bigreactors/languages/ru_RU.properties
+++ b/assets/bigreactors/languages/ru_RU.properties
@@ -5,7 +5,7 @@ itemGroup.BigReactors=\u0411\u043E\u043B\u044C\u0448\u0438\u0435 \u0440\u0435\u0
 
 # Blocks
 tile.brOre.0.name=\u0419\u0435\u043B\u043E\u0440\u0438\u0442\u043E\u0432\u0430\u044F \u0440\u0443\u0434\u0430
-tile.brMetal.0.name=\u0411\u043B\u043E\u043A \u0419\u0435\u043B\u043E\u0440\u0438\u0442\u0430
+tile.brMetal.0.name=\u0411\u043B\u043E\u043A \u0419\u0435\u043B\u043B\u043E\u0440\u0438\u0443\u043C\u0430
 tile.brMetal.1.name=\u0411\u043B\u043E\u043A \u0426\u0438\u0430\u043D\u0438\u0442\u0430
 tile.brMetal.2.name=\u0411\u043B\u043E\u043A \u0413\u0440\u0430\u0444\u0438\u0442\u0430
 tile.brMetal.3.name=\u0411\u043B\u043E\u043A \u0411\u043B\u0443\u0442\u043E\u043D\u0438\u044F
@@ -35,21 +35,21 @@ tile.blockMBCreativePart.0.name=\u041F\u043E\u0440\u0442 \u043E\u0445\u043B\u043
 tile.blockMBCreativePart.1.name=\u0413\u0435\u043D\u0435\u0440\u0430\u0442\u043E\u0440 \u043F\u0430\u0440\u0430 \u0442\u0443\u0440\u0431\u0438\u043D\u044B (\u041A\u0440\u0435\u0430\u0442\u0438\u0432)
 
 # Items
-item.ingotYellorium.name = \u0421\u043B\u0438\u0442\u043E\u043A \u0419\u0435\u043B\u043E\u0440\u0438\u0442\u0430
+item.ingotYellorium.name = \u0421\u043B\u0438\u0442\u043E\u043A \u0419\u0435\u043B\u043B\u043E\u0440\u0438\u0443\u043C\u0430
 item.ingotCyanite.name = \u0421\u043B\u0438\u0442\u043E\u043A \u0426\u0438\u0430\u043D\u0438\u0442\u0430
 item.ingotGraphite.name=\u0421\u043B\u0438\u0442\u043E\u043A \u0433\u0440\u0430\u0444\u0438\u0442\u0430
 item.ingotBlutonium.name=\u0421\u043B\u0438\u0442\u043E\u043A \u0411\u043B\u0443\u0442\u043E\u043D\u0438\u044F
-item.dustYellorium.name=\u041F\u044B\u043B\u044C \u0419\u0435\u043B\u043E\u0440\u0438\u0442\u0430
+item.dustYellorium.name=\u041F\u044B\u043B\u044C \u0419\u0435\u043B\u043B\u043E\u0440\u0438\u0443\u043C\u0430
 item.dustCyanite.name=\u041F\u044B\u043B\u044C \u0426\u0438\u0430\u043D\u0438\u0442\u0430
 item.dustBlutonium.name=\u041F\u044B\u043B\u044C \u0411\u043B\u0443\u0442\u043E\u043D\u0438\u044F
 item.dustGraphite.name=\u041F\u044B\u043B\u044C \u0433\u0440\u0430\u0444\u0438\u0442\u0430
 item.bucket.cyanite.name=\u0412\u0435\u0434\u0440\u043E \u0426\u0438\u0430\u043D\u0438\u0442\u0430
-item.bucket.yellorium.name=\u0412\u0435\u0434\u0440\u043E \u0419\u0435\u043B\u043E\u0440\u0438\u0442\u0430
+item.bucket.yellorium.name=\u0412\u0435\u0434\u0440\u043E \u0419\u0435\u043B\u043B\u043E\u0440\u0438\u0443\u043C\u0430
 
 # Fluids
 fluid.tile.water=\u0412\u043E\u0434\u0430
 fluid.tile.lava=\u041B\u0430\u0432\u0430
-fluid.tile.yellorium=\u0416\u0438\u0434\u043A\u0438\u0439 \u0419\u0435\u043B\u043E\u0440\u0438\u0442
+fluid.tile.yellorium=\u0416\u0438\u0434\u043A\u0438\u0439 \u0419\u0435\u043B\u043B\u043E\u0440\u0438\u0443\u043C
 fluid.tile.cyanite=\u0416\u0438\u0434\u043A\u0438\u0439 \u0426\u0438\u0430\u043D\u0438\u0442
 fluid.tile.blutonium=\u0416\u0438\u0434\u043A\u0438\u0439 \u0411\u043B\u0443\u0442\u043E\u043D\u0438\u0439
 fluid.steam=\u041F\u0430\u0440
