--- a/assets/bigreactors/languages/pl_PL.properties
+++ b/assets/bigreactors/languages/pl_PL.properties
@@ -21,8 +21,8 @@ tile.blockReactorPart.3.name=Reaktor: gniazdo dostępu
 tile.blockReactorPart.4.name=Reaktor: gniazdo RedNet
 tile.blockReactorPart.5.name=Reaktor: gniazdo komputera
 tile.blockReactorPart.6.name=Reaktor: gniazdo chłodziwa
-tile.blockRadiothermalGen.0=Radiothermal Generator
-tile.blockBRSmallMachine.0.name=Cyanite Reprocesssor
+tile.blockRadiothermalGen.0=Radioizotopowy generator termoelektryczny
+tile.blockBRSmallMachine.0.name=Przetwarzacz Cyanitu
 tile.blockTurbinePart.0.name=Turbina: osłona
 tile.blockTurbinePart.1.name=Turbina: gniazdo kontrolne
 tile.blockTurbinePart.2.name=Turbina: gniazdo energii
