--- a/assets/bigreactors/languages/de_DE.properties
+++ b/assets/bigreactors/languages/de_DE.properties
@@ -5,14 +5,14 @@ itemGroup.BigReactors=Big Reactors
 
 # Blocks
 tile.brOre.0.name=Yelloriterz
-tile.brMetal.0.name=Yellorium Block
-tile.brMetal.1.name=Cyanite Block
-tile.brMetal.2.name=Graphite Block
-tile.brMetal.3.name=Blutonium Block
+tile.brMetal.0.name=Yelloriumblock
+tile.brMetal.1.name=Cyanitblock
+tile.brMetal.2.name=Graphitblock
+tile.brMetal.3.name=Blutoniumblock
 tile.yelloriumFuelRod.name=Yelloriumbrennstab
 tile.blockReactorControlRod.name=Reaktorsteuerstab
 tile.multiblockGlass.0.name=Reaktorglas
-tile.multiblockGlass.1.name=Turbine-glas
+tile.multiblockGlass.1.name=Turbinenglas
 tile.blockReactorRedstonePort.name=Reaktor-Redstoneanschluss
 tile.blockReactorPart.0.name=Reaktorgeh\u00e4use
 tile.blockReactorPart.1.name=Reaktorsteuerung
@@ -23,16 +23,16 @@ tile.blockReactorPart.5.name=Reaktor-Computeranschluss
 tile.blockReactorPart.6.name=Reaktor-K\u00fchlanschluss
 tile.blockRadiothermalGen.0=Radiothermalgenerator
 tile.blockBRSmallMachine.0.name=Cyanit-Wiederaufarbeiter
-tile.blockTurbinePart.0.name=Turbine-geh\u00e4use
-tile.blockTurbinePart.1.name=Turbine-steuerung
-tile.blockTurbinePart.2.name=Turbinestromanschluss
-tile.blockTurbinePart.3.name=Turbine-Fl\u00fcssigkeit-Anschluss
-tile.blockTurbinePart.4.name=Turbine Rotor Bearing
-tile.blockTurbinePart.5.name=Turbine-Computeranschluss
-tile.blockTurbineRotorPart.0.name=Turbine Rotor Shaft
-tile.blockTurbineRotorPart.1.name=Turbine Rotor Blade
-tile.blockMBCreativePart.0.name=Reactor Creative Coolant Port
-tile.blockMBCreativePart.1.name=Turbine Creative Steam Generator
+tile.blockTurbinePart.0.name=Turbinengeh\u00e4use
+tile.blockTurbinePart.1.name=Turbinensteuerung
+tile.blockTurbinePart.2.name=Turbinenstromanschluss
+tile.blockTurbinePart.3.name=Turbinen-Fl\u00fcssigkeitsanschluss
+tile.blockTurbinePart.4.name=Turbinenrotorlager
+tile.blockTurbinePart.5.name=Turbinen-Computeranschluss
+tile.blockTurbineRotorPart.0.name=Turbinenrotorschaft
+tile.blockTurbineRotorPart.1.name=Turbinenrotorblatt
+tile.blockMBCreativePart.0.name=Kreativ-Reaktorkühlport
+tile.blockMBCreativePart.1.name=Kreativ-Turbinendampfgenerator
 
 # Items
 item.ingotYellorium.name=Yelloriumbarren
