--- a/assets/bigreactors/languages/en_US.properties
+++ b/assets/bigreactors/languages/en_US.properties
@@ -4,35 +4,35 @@
 itemGroup.BigReactors=Big Reactors
 
 # Blocks
-tile.brOre.0.name=Yellorite Ore
-tile.brMetal.0.name=Yellorium Block
-tile.brMetal.1.name=Cyanite Block
-tile.brMetal.2.name=Graphite Block
-tile.brMetal.3.name=Blutonium Block
-tile.yelloriumFuelRod.name=Yellorium Fuel Rod
-tile.blockReactorControlRod.name=Reactor Control Rod
-tile.multiblockGlass.0.name=Reactor Glass
-tile.multiblockGlass.1.name=Turbine Glass
-tile.blockReactorRedstonePort.name=Reactor Redstone Port
-tile.blockReactorPart.0.name=Reactor Casing
-tile.blockReactorPart.1.name=Reactor Controller
-tile.blockReactorPart.2.name=Reactor Power Tap
-tile.blockReactorPart.3.name=Reactor Access Port
-tile.blockReactorPart.4.name=Reactor RedNet Port
-tile.blockReactorPart.5.name=Reactor Computer Port
-tile.blockReactorPart.6.name=Reactor Coolant Port
-tile.blockRadiothermalGen.0=Radiothermal Generator
-tile.blockBRSmallMachine.0.name=Cyanite Reprocesssor
-tile.blockTurbinePart.0.name=Turbine Housing
-tile.blockTurbinePart.1.name=Turbine Controller
-tile.blockTurbinePart.2.name=Turbine Power Port
-tile.blockTurbinePart.3.name=Turbine Fluid Port
-tile.blockTurbinePart.4.name=Turbine Rotor Bearing
-tile.blockTurbinePart.5.name=Turbine Computer Port
-tile.blockTurbineRotorPart.0.name=Turbine Rotor Shaft
-tile.blockTurbineRotorPart.1.name=Turbine Rotor Blade
-tile.blockMBCreativePart.0.name=Reactor Creative Coolant Port
-tile.blockMBCreativePart.1.name=Turbine Creative Steam Generator
+tile.BigReactors.brOre.0.name=Yellorite Ore
+tile.BigReactors.brMetal.0.name=Yellorium Block
+tile.BigReactors.brMetal.1.name=Cyanite Block
+tile.BigReactors.brMetal.2.name=Graphite Block
+tile.BigReactors.brMetal.3.name=Blutonium Block
+tile.BigReactors.yelloriumFuelRod.name=Yellorium Fuel Rod
+tile.BigReactors.blockReactorControlRod.name=Reactor Control Rod
+tile.BigReactors.multiblockGlass.0.name=Reactor Glass
+tile.BigReactors.multiblockGlass.1.name=Turbine Glass
+tile.BigReactors.blockReactorRedstonePort.name=Reactor Redstone Port
+tile.BigReactors.blockReactorPart.0.name=Reactor Casing
+tile.BigReactors.blockReactorPart.1.name=Reactor Controller
+tile.BigReactors.blockReactorPart.2.name=Reactor Power Tap
+tile.BigReactors.blockReactorPart.3.name=Reactor Access Port
+tile.BigReactors.blockReactorPart.4.name=Reactor RedNet Port
+tile.BigReactors.blockReactorPart.5.name=Reactor Computer Port
+tile.BigReactors.blockReactorPart.6.name=Reactor Coolant Port
+tile.BigReactors.blockRadiothermalGen.0=Radiothermal Generator
+tile.BigReactors.blockBRSmallMachine.0.name=Cyanite Reprocesssor
+tile.BigReactors.blockTurbinePart.0.name=Turbine Housing
+tile.BigReactors.blockTurbinePart.1.name=Turbine Controller
+tile.BigReactors.blockTurbinePart.2.name=Turbine Power Port
+tile.BigReactors.blockTurbinePart.3.name=Turbine Fluid Port
+tile.BigReactors.blockTurbinePart.4.name=Turbine Rotor Bearing
+tile.BigReactors.blockTurbinePart.5.name=Turbine Computer Port
+tile.BigReactors.blockTurbineRotorPart.0.name=Turbine Rotor Shaft
+tile.BigReactors.blockTurbineRotorPart.1.name=Turbine Rotor Blade
+tile.BigReactors.blockMBCreativePart.0.name=Reactor Creative Coolant Port
+tile.BigReactors.blockMBCreativePart.1.name=Turbine Creative Steam Generator
 
 # Items
 item.ingotYellorium.name = Yellorium Ingot
@@ -47,9 +47,9 @@ item.bucket.cyanite.name=Fluid Cyanite Bucket
 item.bucket.yellorium.name=Fluid Yellorium Bucket
 
 # Fluids
-fluid.tile.water=Water
-fluid.tile.lava=Lava
-fluid.tile.yellorium=Fluid Yellorium
-fluid.tile.cyanite=Fluid Cyanite
-fluid.tile.blutonium=Fluid Blutonium
+fluid.tile.BigReactors.water=Water
+fluid.tile.BigReactors.lava=Lava
+fluid.tile.BigReactors.yellorium=Fluid Yellorium
+fluid.tile.BigReactors.cyanite=Fluid Cyanite
+fluid.tile.BigReactors.blutonium=Fluid Blutonium
 fluid.steam=Steam
