Update Chinese Translation

--- a/assets/bigreactors/languages/zh_CN.properties
+++ b/assets/bigreactors/languages/zh_CN.properties
@@ -1,5 +1,5 @@
 # Simplified Chinese Language Properties
-# @author ReventonC
+# @author crafteverywhere,ReventonC
 
 itemGroup.BigReactors=\u5927\u578B\u53CD\u5E94\u5806
 
