--- a/src/main/resources/assets/bigreactors/lang/en_US.lang
+++ b/src/main/resources/assets/bigreactors/lang/en_US.lang
@@ -1,4 +1,4 @@
-# Big Reactors Language Properties - English
+# Big Reactors Language File - English
 # @author Erogenous Beef
 
 itemGroup.BigReactors=Big Reactors
