--- a/src/main/resources/assets/bigreactors/lang/nl_NL.lang
+++ b/src/main/resources/assets/bigreactors/lang/nl_NL.lang
@@ -1,4 +1,4 @@
-# Big Reactors Language Properties - Dutch
+# Big Reactors Language File - Dutch
 # @author InsaneJ and Mupje
 
 itemGroup.BigReactors=Big Reactors
