--- a/src/main/resources/assets/bigreactors/lang/pl_PL.lang
+++ b/src/main/resources/assets/bigreactors/lang/pl_PL.lang
@@ -1,4 +1,4 @@
-# Big Reactors Language Properties - Polish
+# Big Reactors Language File - Polish
 # @author kostek00
 
 itemGroup.BigReactors=Big Reactors
