--- a/src/main/resources/assets/bigreactors/lang/sv_SE.lang
+++ b/src/main/resources/assets/bigreactors/lang/sv_SE.lang
@@ -1,4 +1,4 @@
-# Big Reactors Language Properties - Swedish
+# Big Reactors Language File - Swedish
 # @author erucolindo
 
 itemGroup.BigReactors=Big Reactors
