--- a/src/main/resources/assets/bigreactors/lang/pt_BR.lang
+++ b/src/main/resources/assets/bigreactors/lang/pt_BR.lang
@@ -1,15 +1,15 @@
-# Big Reactors Language Properties - Portugu\u00EAs
+# Big Reactors Language File - Português
 # @author Kevn8082
 
 itemGroup.BigReactors=Big Reactors
 
 # Blocks
-tile.brOre.0.name=Min\u00E9rio de Yellorite
+tile.brOre.0.name=Minério de Yellorite
 tile.brMetal.0.name=Bloco de Yellorium
 tile.brMetal.1.name=Bloco de Cyanite
 tile.brMetal.2.name=Bloco de Grafite
 tile.brMetal.3.name=Bloco de Blutonium
-tile.yelloriumFuelRod.name=Haste de Combust\u00EDvel de Yellorium
+tile.yelloriumFuelRod.name=Haste de Combustível de Yellorium
 tile.blockReactorControlRod.name=Haste de Controle do Reator
 tile.multiblockGlass.0.name=Vidro do Reator
 tile.multiblockGlass.1.name=Vidro da Turbina
@@ -20,18 +20,18 @@ tile.blockReactorPart.2.name=Porta de Energia do Reator
 tile.blockReactorPart.3.name=Porta de Acesso do Reator
 tile.blockReactorPart.4.name=Porta RedNet do Reator
 tile.blockReactorPart.5.name=Entrada de Computador do Reator
-tile.blockReactorPart.6.name=Porta de Refrigera\u00E7\u00E3o do Reator
+tile.blockReactorPart.6.name=Porta de Refrigeração do Reator
 tile.blockRadiothermalGen.0=Gerador Radiotermal
 tile.blockBRSmallMachine.0.name=Reprocessador de Cyanite
 tile.blockTurbinePart.0.name=Alojamento da Turbina
 tile.blockTurbinePart.1.name=Controlador da Turbina
 tile.blockTurbinePart.2.name=Porta de Energia da Turbina
-tile.blockTurbinePart.3.name=Porta de Flu\u00EDdos da Turbina
+tile.blockTurbinePart.3.name=Porta de Fluídos da Turbina
 tile.blockTurbinePart.4.name=Rolamento do Rotor da Turbina
 tile.blockTurbinePart.5.name=Entrada de Computador da Turbina
 tile.blockTurbineRotorPart.0.name=Haste do Rotor da Turbina
-tile.blockTurbineRotorPart.1.name=L\u00E2mina do Rotor da Turbina
-tile.blockMBCreativePart.0.name=Porta Criativa de Refrigera\u00E7\u00E3o do Reator
+tile.blockTurbineRotorPart.1.name=Lâmina do Rotor da Turbina
+tile.blockMBCreativePart.0.name=Porta Criativa de Refrigeração do Reator
 tile.blockMBCreativePart.1.name=Gerador Criativo de Vapor da Turbina
 
 # Items
@@ -39,17 +39,17 @@ item.ingotYellorium.name=Barra de Yellorium
 item.ingotCyanite.name=Barra de Cyanite
 item.ingotGraphite.name=Barra de Grafite
 item.ingotBlutonium.name=Barra de Blutonium
-item.dustYellorium.name=P\u00F3 de Yellorium
-item.dustCyanite.name=P\u00F3 de Cyanite
-item.dustBlutonium.name=P\u00F3 de Blutonium
-item.dustGraphite.name=P\u00F3 de Grafite
-item.bucket.cyanite.name=Balde do Flu\u00EDdo de Cyanite
-item.bucket.yellorium.name=Balde do Flu\u00EDdo de Yellorium
+item.dustYellorium.name=Pó de Yellorium
+item.dustCyanite.name=Pó de Cyanite
+item.dustBlutonium.name=Pó de Blutonium
+item.dustGraphite.name=Pó de Grafite
+item.bucket.cyanite.name=Balde do Fluído de Cyanite
+item.bucket.yellorium.name=Balde do Fluído de Yellorium
 
 # Fluids
-fluid.tile.water=\u00C1gua
+fluid.tile.water=Água
 fluid.tile.lava=Lava
-fluid.tile.yellorium=Flu\u00EDdo de Yellorium
-fluid.tile.cyanite=Flu\u00EDdo de Cyanite
-fluid.tile.blutonium=Flu\u00EDdo de Blutonium
+fluid.tile.yellorium=Fluído de Yellorium
+fluid.tile.cyanite=Fluído de Cyanite
+fluid.tile.blutonium=Fluído de Blutonium
 fluid.steam=Vapor
