--- a/src/main/resources/assets/bigreactors/lang/ru_RU.lang
+++ b/src/main/resources/assets/bigreactors/lang/ru_RU.lang
@@ -1,55 +1,55 @@
-# Big Reactors Language Properties - Russian
+# Big Reactors Language File - Russian
 # @author Vladimir Gendel
 
-itemGroup.BigReactors=\u0411\u043E\u043B\u044C\u0448\u0438\u0435 \u0440\u0435\u0430\u043A\u0442\u043E\u0440\u044B
+itemGroup.BigReactors=Big Reactors
 
 # Blocks
-tile.brOre.0.name=\u0419\u0435\u043B\u043E\u0440\u0438\u0442\u043E\u0432\u0430\u044F \u0440\u0443\u0434\u0430
-tile.brMetal.0.name=\u0411\u043B\u043E\u043A \u0419\u0435\u043B\u043B\u043E\u0440\u0438\u0443\u043C\u0430
-tile.brMetal.1.name=\u0411\u043B\u043E\u043A \u0426\u0438\u0430\u043D\u0438\u0442\u0430
-tile.brMetal.2.name=\u0411\u043B\u043E\u043A \u0413\u0440\u0430\u0444\u0438\u0442\u0430
-tile.brMetal.3.name=\u0411\u043B\u043E\u043A \u0411\u043B\u0443\u0442\u043E\u043D\u0438\u044F
-tile.yelloriumFuelRod.name=\u0422\u043E\u043F\u043B\u0438\u0432\u043D\u044B\u0439 \u0441\u0442\u0435\u0440\u0436\u0435\u043D\u044C
-tile.blockReactorControlRod.name=\u0411\u043B\u043E\u043A \u0443\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u044F \u0441\u0442\u0435\u0440\u0436\u043D\u044F\u043C\u0438
-tile.multiblockGlass.0.name=\u0421\u0442\u0435\u043A\u043B\u043E \u0440\u0435\u0430\u043A\u0442\u043E\u0440\u0430
-tile.multiblockGlass.1.name=\u0421\u0442\u0435\u043A\u043B\u043E \u0442\u0443\u0440\u0431\u0438\u043D\u044B
-tile.blockReactorRedstonePort.name=\u0420\u0435\u0434\u0441\u0442\u043E\u0443\u043D \u043F\u043E\u0440\u0442 \u0440\u0435\u0430\u043A\u0442\u043E\u0440\u0430
-tile.blockReactorPart.0.name=\u041A\u043E\u0440\u043F\u0443\u0441 \u0440\u0435\u0430\u043A\u0442\u043E\u0440\u0430
-tile.blockReactorPart.1.name=\u0411\u043B\u043E\u043A \u0443\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u044F \u0440\u0435\u0430\u043A\u0442\u043E\u0440\u043E\u043C
-tile.blockReactorPart.2.name=\u0420\u043E\u0437\u0435\u0442\u043A\u0430 \u0440\u0435\u0430\u043A\u0442\u043E\u0440\u0430
-tile.blockReactorPart.3.name=\u041F\u043E\u0440\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u0430
-tile.blockReactorPart.4.name=RedNet \u043F\u043E\u0440\u0442
-tile.blockReactorPart.5.name=\u041A\u043E\u043C\u043F\u044C\u044E\u0442\u0435\u0440\u043D\u044B\u0439 \u043F\u043E\u0440\u0442 \u0440\u0435\u0430\u043A\u0442\u043E\u0440\u0430
-tile.blockReactorPart.6.name=\u041F\u043E\u0440\u0442 \u043E\u0445\u043B\u0430\u0436\u0434\u0435\u043D\u0438\u044F
-tile.blockRadiothermalGen.0=\u0420\u0430\u0434\u0438\u043E\u0442\u0435\u0440\u043C\u0430\u043B\u044C\u043D\u044B\u0439 \u0433\u0435\u043D\u0435\u0440\u0430\u0442\u043E\u0440
-tile.blockBRSmallMachine.0.name=\u041F\u0435\u0440\u0435\u0440\u0430\u0431\u043E\u0442\u0447\u0438\u043A \u0446\u0438\u0430\u043D\u0438\u0442\u0430
-tile.blockTurbinePart.0.name=\u041A\u043E\u0440\u043F\u0443\u0441 \u0442\u0443\u0440\u0431\u0438\u043D\u044B
-tile.blockTurbinePart.1.name=\u041F\u043E\u0440\u0442 \u0443\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u044F \u0442\u0443\u0440\u0431\u0438\u043D\u043E\u0439
-tile.blockTurbinePart.2.name=\u0420\u043E\u0437\u0435\u0442\u043A\u0430 \u0442\u0443\u0440\u0431\u0438\u043D\u044B
-tile.blockTurbinePart.3.name=\u041F\u043E\u0440\u0442 \u0436\u0438\u0434\u043A\u043E\u0441\u0442\u0435\u0439
-tile.blockTurbinePart.4.name=\u0420\u043E\u0442\u043E\u0440\u043D\u044B\u0439 \u043F\u043E\u0434\u0448\u0438\u043F\u043D\u0438\u043A
-tile.blockTurbinePart.5.name=\u041A\u043E\u043C\u043F\u044C\u044E\u0442\u0435\u0440\u043D\u044B\u0439 \u043F\u043E\u0440\u0442 \u0442\u0443\u0440\u0431\u0438\u043D\u044B
-tile.blockTurbineRotorPart.0.name=\u0412\u0430\u043B \u0440\u043E\u0442\u043E\u0440\u0430
-tile.blockTurbineRotorPart.1.name=\u041B\u0435\u0437\u0432\u0438\u044F \u0440\u043E\u0442\u043E\u0440\u0430
-tile.blockMBCreativePart.0.name=\u041F\u043E\u0440\u0442 \u043E\u0445\u043B\u0430\u0436\u0434\u0435\u043D\u0438\u044F (\u041A\u0440\u0435\u0430\u0442\u0438\u0432)
-tile.blockMBCreativePart.1.name=\u0413\u0435\u043D\u0435\u0440\u0430\u0442\u043E\u0440 \u043F\u0430\u0440\u0430 \u0442\u0443\u0440\u0431\u0438\u043D\u044B (\u041A\u0440\u0435\u0430\u0442\u0438\u0432)
+tile.brOre.0.name=Йелоритовая руда
+tile.brMetal.0.name=Блок йеллориума
+tile.brMetal.1.name=Блок цианита
+tile.brMetal.2.name=Блок графита
+tile.brMetal.3.name=Блок блутония
+tile.yelloriumFuelRod.name=Топливный стержень
+tile.blockReactorControlRod.name=Блок управления стержнями
+tile.multiblockGlass.0.name=Стекло реактора
+tile.multiblockGlass.1.name=Стекло турбины
+tile.blockReactorRedstonePort.name=Красный порт реактора
+tile.blockReactorPart.0.name=Корпус реактора
+tile.blockReactorPart.1.name=Блок управления реактором
+tile.blockReactorPart.2.name=Розетка реактора
+tile.blockReactorPart.3.name=Порт доступа
+tile.blockReactorPart.4.name=RedNet порт
+tile.blockReactorPart.5.name=Компьютерный порт реактора
+tile.blockReactorPart.6.name=Порт охлаждения
+tile.blockRadiothermalGen.0=Радиотепловой генератор
+tile.blockBRSmallMachine.0.name=Переработчик цианита
+tile.blockTurbinePart.0.name=Корпус турбины
+tile.blockTurbinePart.1.name=Порт управления турбиной
+tile.blockTurbinePart.2.name=Порт питания турбины
+tile.blockTurbinePart.3.name=Порт жидкостей
+tile.blockTurbinePart.4.name=Роторный подшипник
+tile.blockTurbinePart.5.name=Компьютерный порт турбины
+tile.blockTurbineRotorPart.0.name=Вал ротора
+tile.blockTurbineRotorPart.1.name=Лезвие ротора
+tile.blockMBCreativePart.0.name=Порт охлаждения (Творческий)
+tile.blockMBCreativePart.1.name=Генератор пара турбины (Творческий)
 
 # Items
-item.ingotYellorium.name=\u0421\u043B\u0438\u0442\u043E\u043A \u0419\u0435\u043B\u043B\u043E\u0440\u0438\u0443\u043C\u0430
-item.ingotCyanite.name=\u0421\u043B\u0438\u0442\u043E\u043A \u0426\u0438\u0430\u043D\u0438\u0442\u0430
-item.ingotGraphite.name=\u0421\u043B\u0438\u0442\u043E\u043A \u0433\u0440\u0430\u0444\u0438\u0442\u0430
-item.ingotBlutonium.name=\u0421\u043B\u0438\u0442\u043E\u043A \u0411\u043B\u0443\u0442\u043E\u043D\u0438\u044F
-item.dustYellorium.name=\u041F\u044B\u043B\u044C \u0419\u0435\u043B\u043B\u043E\u0440\u0438\u0443\u043C\u0430
-item.dustCyanite.name=\u041F\u044B\u043B\u044C \u0426\u0438\u0430\u043D\u0438\u0442\u0430
-item.dustBlutonium.name=\u041F\u044B\u043B\u044C \u0411\u043B\u0443\u0442\u043E\u043D\u0438\u044F
-item.dustGraphite.name=\u041F\u044B\u043B\u044C \u0433\u0440\u0430\u0444\u0438\u0442\u0430
-item.bucket.cyanite.name=\u0412\u0435\u0434\u0440\u043E \u0426\u0438\u0430\u043D\u0438\u0442\u0430
-item.bucket.yellorium.name=\u0412\u0435\u0434\u0440\u043E \u0419\u0435\u043B\u043B\u043E\u0440\u0438\u0443\u043C\u0430
+item.ingotYellorium.name=Слиток йеллориума
+item.ingotCyanite.name=Слиток цианита
+item.ingotGraphite.name=Слиток графита
+item.ingotBlutonium.name=Слиток блутония
+item.dustYellorium.name=Пыль йеллориума
+item.dustCyanite.name=Пыль цианита
+item.dustBlutonium.name=Пыль блутония
+item.dustGraphite.name=Пыль графита
+item.bucket.cyanite.name=Ведро цианита
+item.bucket.yellorium.name=Ведро йеллориума
 
 # Fluids
-fluid.tile.water=\u0412\u043E\u0434\u0430
-fluid.tile.lava=\u041B\u0430\u0432\u0430
-fluid.tile.yellorium=\u0416\u0438\u0434\u043A\u0438\u0439 \u0419\u0435\u043B\u043B\u043E\u0440\u0438\u0443\u043C
-fluid.tile.cyanite=\u0416\u0438\u0434\u043A\u0438\u0439 \u0426\u0438\u0430\u043D\u0438\u0442
-fluid.tile.blutonium=\u0416\u0438\u0434\u043A\u0438\u0439 \u0411\u043B\u0443\u0442\u043E\u043D\u0438\u0439
-fluid.steam=\u041F\u0430\u0440
+fluid.tile.water=Вода
+fluid.tile.lava=Лава
+fluid.tile.yellorium=Жидкий йеллориум
+fluid.tile.cyanite=Жидкий цианит
+fluid.tile.blutonium=Жидкий блутоний
+fluid.steam=Пар
