Updating BlockBRSmallMachine >> BlockBRDevice in language files

--- a/src/main/resources/assets/bigreactors/lang/de_DE.lang
+++ b/src/main/resources/assets/bigreactors/lang/de_DE.lang
@@ -22,7 +22,7 @@ tile.blockReactorPart.4.name=Reaktor-RedNet-Anschluss
 tile.blockReactorPart.5.name=Reaktor-Computeranschluss
 tile.blockReactorPart.6.name=Reaktor-Kühlanschluss
 tile.blockRadiothermalGen.0=Radiothermalgenerator
-tile.blockBRSmallMachine.0.name=Cyanit-Wiederaufarbeiter
+tile.blockBRDevice.0.name=Cyanit-Wiederaufarbeiter
 tile.blockTurbinePart.0.name=Turbinengehäuse
 tile.blockTurbinePart.1.name=Turbinensteuerung
 tile.blockTurbinePart.2.name=Turbinenstromanschluss
