--- a/src/main/resources/assets/bigreactors/lang/en_US.lang
+++ b/src/main/resources/assets/bigreactors/lang/en_US.lang
@@ -22,7 +22,7 @@ tile.blockReactorPart.4.name=Reactor RedNet Port
 tile.blockReactorPart.5.name=Reactor Computer Port
 tile.blockReactorPart.6.name=Reactor Coolant Port
 tile.blockRadiothermalGen.0=Radiothermal Generator
-tile.blockBRSmallMachine.0.name=Cyanite Reprocesssor
+tile.blockBRDevice.0.name=Cyanite Reprocesssor
 tile.blockTurbinePart.0.name=Turbine Housing
 tile.blockTurbinePart.1.name=Turbine Controller
 tile.blockTurbinePart.2.name=Turbine Power Port
