--- a/src/main/resources/assets/bigreactors/lang/pl_PL.lang
+++ b/src/main/resources/assets/bigreactors/lang/pl_PL.lang
@@ -22,7 +22,7 @@ tile.blockReactorPart.4.name=Reaktor: gniazdo RedNet
 tile.blockReactorPart.5.name=Reaktor: gniazdo komputera
 tile.blockReactorPart.6.name=Reaktor: gniazdo chłodziwa
 tile.blockRadiothermalGen.0=Radioizotopowy generator termoelektryczny
-tile.blockBRSmallMachine.0.name=Przetwarzacz Cyanitu
+tile.blockBRDevice.0.name=Przetwarzacz Cyanitu
 tile.blockTurbinePart.0.name=Turbina: osłona
 tile.blockTurbinePart.1.name=Turbina: gniazdo kontrolne
 tile.blockTurbinePart.2.name=Turbina: gniazdo energii
