--- a/src/main/resources/assets/bigreactors/lang/pt_BR.lang
+++ b/src/main/resources/assets/bigreactors/lang/pt_BR.lang
@@ -22,7 +22,7 @@ tile.blockReactorPart.4.name=Porta RedNet do Reator
 tile.blockReactorPart.5.name=Entrada de Computador do Reator
 tile.blockReactorPart.6.name=Porta de Refrigeração do Reator
 tile.blockRadiothermalGen.0=Gerador Radiotermal
-tile.blockBRSmallMachine.0.name=Reprocessador de Cyanite
+tile.blockBRDevice.0.name=Reprocessador de Cyanite
 tile.blockTurbinePart.0.name=Alojamento da Turbina
 tile.blockTurbinePart.1.name=Controlador da Turbina
 tile.blockTurbinePart.2.name=Porta de Energia da Turbina
