--- a/src/main/resources/assets/bigreactors/lang/sv_SE.lang
+++ b/src/main/resources/assets/bigreactors/lang/sv_SE.lang
@@ -22,7 +22,7 @@ tile.blockReactorPart.4.name=Reaktor RedNetanslutning
 tile.blockReactorPart.5.name=Reaktor Datoranslutning
 tile.blockReactorPart.6.name=Reaktorkylanslutning
 tile.blockRadiothermalGen.0=Radiotermisk Generator
-tile.blockBRSmallMachine.0.name=Cyanit Upparbetare
+tile.blockBRDevice.0.name=Cyanit Upparbetare
 tile.blockTurbinePart.0.name=Turbinhölje
 tile.blockTurbinePart.1.name=Turbinkontroller
 tile.blockTurbinePart.2.name=Turbinkraftanslutning
