--- a/src/main/resources/assets/bigreactors/lang/zh_CN.lang
+++ b/src/main/resources/assets/bigreactors/lang/zh_CN.lang
@@ -22,7 +22,7 @@ tile.blockReactorPart.4.name=\u53cd\u5e94\u5806\u7ea2\u77f3\u7f51\u7edc\u7aef\u5
 tile.blockReactorPart.5.name=\u53CD\u5E94\u5806\u7535\u8111\u7AEF\u53E3
 tile.blockReactorPart.6.name=\u53CD\u5E94\u5806\u51B7\u5374\u7AEF\u53E3
 tile.blockRadiothermalGen.0=\u653e\u5c04\u6027\u540c\u4f4d\u7d20\u70ed\u7535\u673a
-tile.blockBRSmallMachine.0.name=\u84dd\u6676\u518d\u52a0\u5de5\u673a
+tile.blockBRDevice.0.name=\u84dd\u6676\u518d\u52a0\u5de5\u673a
 tile.blockTurbinePart.0.name=\u6DA1\u8F6E\u673A\u5916\u58F3
 tile.blockTurbinePart.1.name=\u6DA1\u8F6E\u673A\u63A7\u5236\u5668
 tile.blockTurbinePart.2.name=\u6DA1\u8F6E\u673A\u80FD\u91CF\u7AEF\u53E3
