--- a/src/main/resources/assets/bigreactors/lang/es_SP.lang
+++ b/src/main/resources/assets/bigreactors/lang/es_SP.lang
@@ -22,7 +22,7 @@ tile.blockReactorPart.4.name=Puerto de RedNet del Reactor
 tile.blockReactorPart.5.name=Puerto de Ordenador al Reactor
 tile.blockReactorPart.6.name=Puerto de Refrigerante al Reactor
 tile.blockRadiothermalGen.0=Generador RadioTérmico
-tile.blockBRSmallMachine.0.name=Reprocesador de Cyanite
+tile.blockBRDevice.0.name=Reprocesador de Cyanite
 tile.blockTurbinePart.0.name=Caja de la Turbina
 tile.blockTurbinePart.1.name=Controlador de la Turbina
 tile.blockTurbinePart.2.name=Fuente de Alimentación de la Turbina
