--- a/src/main/resources/assets/bigreactors/lang/nl_NL.lang
+++ b/src/main/resources/assets/bigreactors/lang/nl_NL.lang
@@ -22,7 +22,7 @@ tile.blockReactorPart.4.name=ReactorRedNetpoort
 tile.blockReactorPart.5.name=Reactorcomputerpoort
 tile.blockReactorPart.6.name=Reactorkoelingspoort
 tile.blockRadiothermalGen.0=Thermo-elektrische Generator
-tile.blockBRSmallMachine.0.name=Cyanideverwerker
+tile.blockBRDevice.0.name=Cyanideverwerker
 tile.blockTurbinePart.0.name=Turbinebehuizing
 tile.blockTurbinePart.1.name=Turbinecontroller
 tile.blockTurbinePart.2.name=Turbine-energie-uitvoer
