Refactor: Merge control rod into main reactor part block
And remove a ton of old dead code

--- a/src/main/resources/assets/bigreactors/lang/en_US.lang
+++ b/src/main/resources/assets/bigreactors/lang/en_US.lang
@@ -10,17 +10,17 @@ tile.brMetal.1.name=Cyanite Block
 tile.brMetal.2.name=Graphite Block
 tile.brMetal.3.name=Blutonium Block
 tile.yelloriumFuelRod.name=Yellorium Fuel Rod
-tile.blockReactorControlRod.name=Reactor Control Rod
 tile.multiblockGlass.0.name=Reactor Glass
 tile.multiblockGlass.1.name=Turbine Glass
 tile.blockReactorRedstonePort.name=Reactor Redstone Port
 tile.blockReactorPart.0.name=Reactor Casing
 tile.blockReactorPart.1.name=Reactor Controller
-tile.blockReactorPart.2.name=Reactor Power Tap
-tile.blockReactorPart.3.name=Reactor Access Port
-tile.blockReactorPart.4.name=Reactor RedNet Port
-tile.blockReactorPart.5.name=Reactor Computer Port
-tile.blockReactorPart.6.name=Reactor Coolant Port
+tile.blockReactorPart.2.name=Reactor Control Rod
+tile.blockReactorPart.3.name=Reactor Power Tap
+tile.blockReactorPart.4.name=Reactor Access Port
+tile.blockReactorPart.6.name=Reactor RedNet Port
+tile.blockReactorPart.7.name=Reactor Computer Port
+tile.blockReactorPart.5.name=Reactor Coolant Port
 tile.blockRadiothermalGen.0=Radiothermal Generator
 tile.blockBRDevice.0.name=Cyanite Reprocesssor
 tile.blockTurbinePart.0.name=Turbine Housing
