--- a/src/main/resources/assets/bigreactors/lang/es_SP.lang
+++ b/src/main/resources/assets/bigreactors/lang/es_SP.lang
@@ -10,17 +10,17 @@ tile.brMetal.1.name=Bloque de Cyanite
 tile.brMetal.2.name=Bloque de Grafito
 tile.brMetal.3.name=Bloque de Blutonio
 tile.yelloriumFuelRod.name=Barra de Combustible de Yelorio
-tile.blockReactorControlRod.name=Barra de Control del Reactor
 tile.multiblockGlass.0.name=Cristal del Reactor
 tile.multiblockGlass.1.name=Cristal de la Turbine
 tile.blockReactorRedstonePort.name=Puerto de Redstone del Reactor
 tile.blockReactorPart.0.name=Caja del Reactor
 tile.blockReactorPart.1.name=Controlador del Reactor
-tile.blockReactorPart.2.name=Fuente de Alimentación del Reactor
-tile.blockReactorPart.3.name=Puerto de Acceso al Reactor
-tile.blockReactorPart.4.name=Puerto de RedNet del Reactor
-tile.blockReactorPart.5.name=Puerto de Ordenador al Reactor
-tile.blockReactorPart.6.name=Puerto de Refrigerante al Reactor
+tile.blockReactorPart.2.name=Barra de Control del Reactor
+tile.blockReactorPart.3.name=Fuente de Alimentación del Reactor
+tile.blockReactorPart.4.name=Puerto de Acceso al Reactor
+tile.blockReactorPart.6.name=Puerto de RedNet del Reactor
+tile.blockReactorPart.7.name=Puerto de Ordenador al Reactor
+tile.blockReactorPart.5.name=Puerto de Refrigerante al Reactor
 tile.blockRadiothermalGen.0=Generador RadioTérmico
 tile.blockBRDevice.0.name=Reprocesador de Cyanite
 tile.blockTurbinePart.0.name=Caja de la Turbina
