--- a/src/main/resources/assets/bigreactors/lang/pl_PL.lang
+++ b/src/main/resources/assets/bigreactors/lang/pl_PL.lang
@@ -10,17 +10,17 @@ tile.brMetal.1.name=Blok Cyanitu
 tile.brMetal.2.name=Blok Grafitu
 tile.brMetal.3.name=Blok Blutonium
 tile.yelloriumFuelRod.name=Reaktor: pręt paliwowy
-tile.blockReactorControlRod.name=Reaktor: kontroler prętów paliwowych
 tile.multiblockGlass.0.name=Reaktor: szyba
 tile.multiblockGlass.1.name=Turbina: szyba
 tile.blockReactorRedstonePort.name=Reaktor: kontroler sygnału
 tile.blockReactorPart.0.name=Reaktor: osłona
 tile.blockReactorPart.1.name=Reaktor: gniazdo kontrolne
-tile.blockReactorPart.2.name=Reaktor: gniazdo energii
-tile.blockReactorPart.3.name=Reaktor: gniazdo dostępu
-tile.blockReactorPart.4.name=Reaktor: gniazdo RedNet
-tile.blockReactorPart.5.name=Reaktor: gniazdo komputera
-tile.blockReactorPart.6.name=Reaktor: gniazdo chłodziwa
+tile.blockReactorPart.2.name=Reaktor: kontroler prętów paliwowych
+tile.blockReactorPart.3.name=Reaktor: gniazdo energii
+tile.blockReactorPart.4.name=Reaktor: gniazdo dostępu
+tile.blockReactorPart.6.name=Reaktor: gniazdo RedNet
+tile.blockReactorPart.7.name=Reaktor: gniazdo komputera
+tile.blockReactorPart.5.name=Reaktor: gniazdo chłodziwa
 tile.blockRadiothermalGen.0=Radioizotopowy generator termoelektryczny
 tile.blockBRDevice.0.name=Przetwarzacz Cyanitu
 tile.blockTurbinePart.0.name=Turbina: osłona
