--- a/src/main/resources/assets/bigreactors/lang/pt_BR.lang
+++ b/src/main/resources/assets/bigreactors/lang/pt_BR.lang
@@ -10,17 +10,17 @@ tile.brMetal.1.name=Bloco de Cyanite
 tile.brMetal.2.name=Bloco de Grafite
 tile.brMetal.3.name=Bloco de Blutonium
 tile.yelloriumFuelRod.name=Haste de Combustível de Yellorium
-tile.blockReactorControlRod.name=Haste de Controle do Reator
 tile.multiblockGlass.0.name=Vidro do Reator
 tile.multiblockGlass.1.name=Vidro da Turbina
 tile.blockReactorRedstonePort.name=Porta de Redstone do Reator
 tile.blockReactorPart.0.name=Alojamento do Reator
 tile.blockReactorPart.1.name=Controlador do Reator
-tile.blockReactorPart.2.name=Porta de Energia do Reator
-tile.blockReactorPart.3.name=Porta de Acesso do Reator
-tile.blockReactorPart.4.name=Porta RedNet do Reator
-tile.blockReactorPart.5.name=Entrada de Computador do Reator
-tile.blockReactorPart.6.name=Porta de Refrigeração do Reator
+tile.blockReactorPart.2.name=Haste de Controle do Reator
+tile.blockReactorPart.3.name=Porta de Energia do Reator
+tile.blockReactorPart.4.name=Porta de Acesso do Reator
+tile.blockReactorPart.6.name=Porta RedNet do Reator
+tile.blockReactorPart.7.name=Entrada de Computador do Reator
+tile.blockReactorPart.5.name=Porta de Refrigeração do Reator
 tile.blockRadiothermalGen.0=Gerador Radiotermal
 tile.blockBRDevice.0.name=Reprocessador de Cyanite
 tile.blockTurbinePart.0.name=Alojamento da Turbina
