--- a/src/main/resources/assets/bigreactors/lang/sv_SE.lang
+++ b/src/main/resources/assets/bigreactors/lang/sv_SE.lang
@@ -10,17 +10,17 @@ tile.brMetal.1.name=Cyanitblock
 tile.brMetal.2.name=Grafitblock
 tile.brMetal.3.name=Blutoniumblock
 tile.yelloriumFuelRod.name=Yellorium Bränslestav
-tile.blockReactorControlRod.name=Reaktor Styrstav
 tile.multiblockGlass.0.name=Reaktorglas
 tile.multiblockGlass.1.name=Turbinglas
 tile.blockReactorRedstonePort.name=Reaktor Rödstensport
 tile.blockReactorPart.0.name=Reaktorhölje
 tile.blockReactorPart.1.name=Reaktorkontroller
-tile.blockReactorPart.2.name=Reaktorkraftanslutning
-tile.blockReactorPart.3.name=Reaktoråtkomst
-tile.blockReactorPart.4.name=Reaktor RedNetanslutning
-tile.blockReactorPart.5.name=Reaktor Datoranslutning
-tile.blockReactorPart.6.name=Reaktorkylanslutning
+tile.blockReactorPart.2.name=Reaktor Styrstav
+tile.blockReactorPart.3.name=Reaktorkraftanslutning
+tile.blockReactorPart.4.name=Reaktoråtkomst
+tile.blockReactorPart.6.name=Reaktor RedNetanslutning
+tile.blockReactorPart.7.name=Reaktor Datoranslutning
+tile.blockReactorPart.5.name=Reaktorkylanslutning
 tile.blockRadiothermalGen.0=Radiotermisk Generator
 tile.blockBRDevice.0.name=Cyanit Upparbetare
 tile.blockTurbinePart.0.name=Turbinhölje
