--- a/src/main/resources/assets/bigreactors/lang/zh_CN.lang
+++ b/src/main/resources/assets/bigreactors/lang/zh_CN.lang
@@ -10,17 +10,17 @@ tile.brMetal.1.name=\u84DD\u6676\u5757
 tile.brMetal.2.name=\u77F3\u58A8\u5757
 tile.brMetal.3.name=\u84DD\u949A\u5757
 tile.yelloriumFuelRod.name=\u9ec4\u94c0\u71c3\u6599\u68d2
-tile.blockReactorControlRod.name=\u53cd\u5e94\u5806\u63a7\u5236\u68d2
 tile.multiblockGlass.0.name=\u53cd\u5e94\u5806\u73bb\u7483
 tile.multiblockGlass.1.name=\u6DA1\u8F6E\u673A\u73BB\u7483
 tile.blockReactorRedstonePort.name=\u53CD\u5E94\u5806\u7EA2\u77F3\u7AEF\u53E3
 tile.blockReactorPart.0.name=\u53cd\u5e94\u5806\u5916\u58f3
 tile.blockReactorPart.1.name=\u53cd\u5e94\u5806\u63a7\u5236\u5668
-tile.blockReactorPart.2.name=\u53cd\u5e94\u5806\u80fd\u91cf\u63a5\u53e3
-tile.blockReactorPart.3.name=\u53cd\u5e94\u5806\u8bbf\u95ee\u7aef\u53e3
-tile.blockReactorPart.4.name=\u53cd\u5e94\u5806\u7ea2\u77f3\u7f51\u7edc\u7aef\u53e3
-tile.blockReactorPart.5.name=\u53CD\u5E94\u5806\u7535\u8111\u7AEF\u53E3
-tile.blockReactorPart.6.name=\u53CD\u5E94\u5806\u51B7\u5374\u7AEF\u53E3
+tile.blockReactorPart.2.name=\u53cd\u5e94\u5806\u63a7\u5236\u68d2
+tile.blockReactorPart.3.name=\u53cd\u5e94\u5806\u80fd\u91cf\u63a5\u53e3
+tile.blockReactorPart.4.name=\u53cd\u5e94\u5806\u8bbf\u95ee\u7aef\u53e3
+tile.blockReactorPart.6.name=\u53cd\u5e94\u5806\u7ea2\u77f3\u7f51\u7edc\u7aef\u53e3
+tile.blockReactorPart.7.name=\u53CD\u5E94\u5806\u7535\u8111\u7AEF\u53E3
+tile.blockReactorPart.5.name=\u53CD\u5E94\u5806\u51B7\u5374\u7AEF\u53E3
 tile.blockRadiothermalGen.0=\u653e\u5c04\u6027\u540c\u4f4d\u7d20\u70ed\u7535\u673a
 tile.blockBRDevice.0.name=\u84dd\u6676\u518d\u52a0\u5de5\u673a
 tile.blockTurbinePart.0.name=\u6DA1\u8F6E\u673A\u5916\u58F3
