--- a/src/main/resources/assets/bigreactors/lang/de_DE.lang
+++ b/src/main/resources/assets/bigreactors/lang/de_DE.lang
@@ -10,17 +10,17 @@ tile.brMetal.1.name=Cyanitblock
 tile.brMetal.2.name=Graphitblock
 tile.brMetal.3.name=Blutoniumblock
 tile.yelloriumFuelRod.name=Yelloriumbrennstab
-tile.blockReactorControlRod.name=Reaktorsteuerstab
 tile.multiblockGlass.0.name=Reaktorglas
 tile.multiblockGlass.1.name=Turbinenglas
 tile.blockReactorRedstonePort.name=Reaktor-Redstoneanschluss
 tile.blockReactorPart.0.name=Reaktorgehäuse
 tile.blockReactorPart.1.name=Reaktorsteuerung
-tile.blockReactorPart.2.name=Reaktorstromanschluss
-tile.blockReactorPart.3.name=Reaktorzugang
-tile.blockReactorPart.4.name=Reaktor-RedNet-Anschluss
-tile.blockReactorPart.5.name=Reaktor-Computeranschluss
-tile.blockReactorPart.6.name=Reaktor-Kühlanschluss
+tile.blockReactorPart.2.name=Reaktorsteuerstab
+tile.blockReactorPart.3.name=Reaktorstromanschluss
+tile.blockReactorPart.4.name=Reaktorzugang
+tile.blockReactorPart.6.name=Reaktor-RedNet-Anschluss
+tile.blockReactorPart.7.name=Reaktor-Computeranschluss
+tile.blockReactorPart.5.name=Reaktor-Kühlanschluss
 tile.blockRadiothermalGen.0=Radiothermalgenerator
 tile.blockBRDevice.0.name=Cyanit-Wiederaufarbeiter
 tile.blockTurbinePart.0.name=Turbinengehäuse
