--- a/src/main/resources/assets/bigreactors/lang/nl_NL.lang
+++ b/src/main/resources/assets/bigreactors/lang/nl_NL.lang
@@ -10,17 +10,17 @@ tile.brMetal.1.name=Cyanide Blok
 tile.brMetal.2.name=Grafeen Blok
 tile.brMetal.3.name=Blautonium Blok
 tile.yelloriumFuelRod.name=Gelium Brandstofstaaf
-tile.blockReactorControlRod.name=Reactor Controlestaaf
 tile.multiblockGlass.0.name=Reactorglas
 tile.multiblockGlass.1.name=Turbineglas
 tile.blockReactorRedstonePort.name=Reactorredstonepoort
 tile.blockReactorPart.0.name=Reactorbehuizing
 tile.blockReactorPart.1.name=Reactorcontroller
-tile.blockReactorPart.2.name=Reactorenergieuitvoer
-tile.blockReactorPart.3.name=Reactortoegangspoort
-tile.blockReactorPart.4.name=ReactorRedNetpoort
-tile.blockReactorPart.5.name=Reactorcomputerpoort
-tile.blockReactorPart.6.name=Reactorkoelingspoort
+tile.blockReactorPart.2.name=Reactor Controlestaaf
+tile.blockReactorPart.3.name=Reactorenergieuitvoer
+tile.blockReactorPart.4.name=Reactortoegangspoort
+tile.blockReactorPart.6.name=ReactorRedNetpoort
+tile.blockReactorPart.7.name=Reactorcomputerpoort
+tile.blockReactorPart.5.name=Reactorkoelingspoort
 tile.blockRadiothermalGen.0=Thermo-elektrische Generator
 tile.blockBRDevice.0.name=Cyanideverwerker
 tile.blockTurbinePart.0.name=Turbinebehuizing
