--- a/src/main/resources/assets/bigreactors/lang/ko_KR.lang
+++ b/src/main/resources/assets/bigreactors/lang/ko_KR.lang
@@ -37,7 +37,7 @@ tile.blockMBCreativePart.1.name=터빈 크리에이티브 증기 발전기
 # Items
 item.ingotYellorium.name=옐로리움 주괴
 item.ingotCyanite.name=싸이언이트 주괴
-item.ingotGraphite.name=그라파이트 Bar
+item.ingotGraphite.name=그라파이트 바
 item.ingotBlutonium.name=블루토니움 주괴
 item.dustYellorium.name=옐로리움 가루
 item.dustCyanite.name=싸이언이트 가루
